# technical-resume

./: .env.example  .gitignore  ARCHITECTURE.md  AlejandroSanchezYaliAIDeveloper.tex  AlejandroSanchezYaliApplaudoFullStack.tex  AlejandroSanchezYaliEnterpriseAIEngineer.tex  AlejandroSanchezYaliFrontend.tex  AlejandroSanchezYaliFrontendDeveloper.tex  AlejandroSanchezYaliFullStackBlockchainDeveloper.tex  AlejandroSanchezYaliFullStackDeveloper.tex  AlejandroSanchezYaliNodeDeveloper.tex  AlejandroSanchezYaliPythonDeveloper.tex  AlejandroSanchezYaliSeniorNodeFullstack.tex  CLAUDE.md  FullStackNode.tex  Letter-AI.tex  MELI-Backend-developer.tex  MELI-Bootcamp.tex  README.md  agent.py  ai.tex  compile_tex.sh  frontend.tex  generate_readme.sh  letter-fullstack.tex  main.tex  ml.tex  pyproject.toml
.claude/: rules
.github/workflows/: generate_readme.sh  latex.yml
data/: resume-master.json
docs/: README.md  architecture.md  cli-reference.md  getting-started.md  master-data.md
jobs/: 20260108_python_react.txt  20260217_python_react.txt  20260217_typescript.txt  20260318_ai_healthcare.txt  backend-python.txt  example-job.txt
src/: __init__.py  data_loader.py  latex_compiler.py  latex_generator.py  llm_handler.py  markdown_generator.py
templates/: example.tex
templates/prompts/: system_prompt.txt
