[project]
name = "resume-agent"
version = "0.1.0"
description = "AI-powered resume generator using Claude via LiteLLM"
readme = "ARCHITECTURE.md"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
resume-agent = "agent:cli"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
